# gifboard

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  default.nix  flake.nix  package-appimage.sh  test-x11.sh
.github/workflows/: release.yml
gifboard-app/: Cargo.toml
gifboard-app/src/: main.rs
gifboard-core/: Cargo.toml
gifboard-core/src/: cache.rs  clipboard.rs  config.rs  lib.rs
gifboard-core/src/query/: fetch.rs  klippy.rs  mod.rs
gifboard-core/src/query/local/: fuzzy_find.rs  mod.rs
gifboard-qml/: Cargo.toml  build.rs
gifboard-qml/qml/: GifBrowser.qml  PreviewImage.qml  main.qml
gifboard-qml/src/: clipboard.rs  config.rs  image_size.h  keysym_to_QTKey.cpp  lib.rs  search_results.rs  x11_filter.cpp  x11_manager.rs
qml/: main.qml
src/: main.rs  myobject.rs
