[package]
name = "gifboard"
edition = "2024"
version.workspace = true

[dependencies]
cxx = "1.0.194"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8.1", features = ["qt_full"] }
gifboard-qml = { path = "../gifboard-qml" }
serde_json = "1.0.149"
xdg = "3.0.0"

[build-dependencies]
cxx-qt-build = { version = "0.8.1", features = ["link_qt_object_files"] }
