[package]
name = "gifboard-core"
edition = "2024"

[dependencies]
cxx = "1.0.194"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8.1", features = ["qt_full"] }
reqwest = { version = "0.13.3", features = ["form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tokio = { version = "1.52.3", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }
xdg = "3.0.0"

[build-dependencies]
cxx-qt-build = { version = "0.8.1", features = ["link_qt_object_files"] }
